2019-06-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Add -Wredundant-decls -Wshadow -Wformat-security compiler warnings

	* configure.ac:
	* meson.build:

2019-06-10  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix format string error

	* src/sendmsg-window.c (sw_insert_sig_activated): fix a “format
	  not a string literal and no format arguments” error (using
	    gcc w/ -Werror=format-security).

2019-06-10  Albrecht Dreß  <albrecht.dress@arcor.de>

	Implement VCalendar stuff using G_*_TYPE()

	* libbalsa/rfc2445.[ch]: implement LibBalsaVCal and LibBalsaVEvent
	  using G_DECLARE_FINAL_TYPE() and G_DEFINE_TYPE(); make the data
	  fields private; implement private member getters required for
	  display and printing
	* src/balsa-mime-widget-vcalendar.c: use new LibBalsaVCal and
	  LibBalsaVEvent getters; add missing “Created” DTSTAMP item
	* src/balsa-print-object-text.c: use new LibBalsaVCal and
	  LibBalsaVEvent getters; add missing “Created” DTSTAMP item;
	  use same labels as for screen display

2019-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use G_DECLARE_FINAL_TYPE to declare LibBalsaVfs

	Make the object private, and move the members of
	LibBalsaVfsPriv into LibBalsaVfs; as a final
	type, it does not need a private struct.

	* libbalsa/files.c (libbalsa_icon_finder):
	* libbalsa/libbalsa-vfs.c (libbalsa_vfs_class_init),
	(libbalsa_vfs_init), (libbalsa_vfs_finalize),
	(libbalsa_vfs_new_from_uri), (libbalsa_vfs_append),
	(libbalsa_vfs_dir_append), (libbalsa_vfs_get_folder),
	(libbalsa_vfs_get_uri), (libbalsa_vfs_get_uri_utf8),
	(libbalsa_vfs_get_basename_utf8), (libbalsa_vfs_get_mime_type),
	(libbalsa_vfs_get_charset), (libbalsa_vfs_get_text_attr),
	(libbalsa_vfs_get_size), (libbalsa_vfs_create_stream),
	(libbalsa_vfs_file_exists), (libbalsa_vfs_is_regular_file),
	(libbalsa_vfs_file_unlink), (libbalsa_vfs_launch_app),
	(libbalsa_vfs_launch_app_for_body), (gio_add_vfs_menu_item),
	(libbalsa_vfs_fill_menu_by_content_type),